--- a/style.css
+++ b/style.css
@@ -30,7 +30,11 @@ body {
     cursor: pointer;
 }
 input{
-    border-style:groove; width: 700px; height: 30px; padding: 5px; margin: 5px;
+    width: 700px; 
+    height: 30px;
+    padding: 5px;
+    margin: 5px;
+    
 }
 a{
     text-decoration: none;
